linked Demo-page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <p class="text-lg text-blue-100 mb-8">
       Inventra is your smart inventory partner — track, manage, and grow effortlessly with our intuitive system.
     </p>
-    <a href="#" class="bg-white text-blue-700 px-6 py-3 rounded-lg shadow hover:bg-gray-300 transition text-lg font-semibold">Get Started Free</a>
+    <a href="https://amank2601.github.io/Inventra-Demo/" class="bg-white text-blue-700 px-6 py-3 rounded-lg shadow hover:bg-gray-300 transition text-lg font-semibold">Get Started Free</a>
   </div>
 </section>
 
